fix(jpa): 修复批量操作中的多个安全漏洞和性能问题
- 修复软删除操作中已删除记录计数错误的问题
- 修复条件节点构造函数绕过白名单验证的安全漏洞
- 修复CTE SQL注入防护中的PostgreSQL美元引用字符串处理
- 修复加密转换器中密钥迭代次数变更导致的数据不可解密问题
- 修复连接池代理中数据库类型检测失败的问题
- 修复上下文关闭事件中的死锁风险
- 修复LEFT FETCH JOIN条件应用位置错误导致的JOIN语义降级
- 修复子查询相关路径类型检查中的异常处理
- 优化加密转换器中密码对象池的大小跟踪机制
- 添加对Spring Boot属性配置值的上限验证
- 增强错误日志记录和异常消息的诊断信息
- 添加对空参数输入的合法性检查和验证